--- a/templates/home.html
+++ b/templates/home.html
@@ -66,11 +66,11 @@
                                             <ul class="social">
                                                 <li><a href="{% url 'products:get_product' item.slug %}" data-tip="Quick View"><span class="fa fa-eye"></span></a></li>
     
-                                                <li><a href="products.html" data-tip="Add to Cart"><span class="fa fa-shopping-bag"></span></a>
+                                                <li><a href="{% url 'accounts:add_to_cart' item.slug %}" data-tip="Add to Cart"><span class="fa fa-shopping-bag"></span></a>
                                                 </li>
                                             </ul>
                                             <div class="shopv single-item">
-                                                <form action="#" method="post">
+                                                {% comment %} <form action="#" method="post">
                                                     <input type="hidden" name="cmd" value="_cart">
                                                     <input type="hidden" name="add" value="1">
                                                     <input type="hidden" name="shopv_item" value="Checkered Casual Shirt">
@@ -78,7 +78,8 @@
                                                     <button type="submit" class="shopv-cart pshopv-cart add-to-cart">
                                                         Add to Cart
                                                     </button>
-                                                </form>
+                                                </form> {% endcomment %}
+                                                <a class="shopv-cart pshopv-cart add-to-cart btn btn-style btn-primary" href="{% url 'accounts:add_to_cart' item.slug %}">Add to Cart</a>
                                             </div>
                                         </div>
                                         <div class="product-content">
