--- a/templates/products/sell_product.html
+++ b/templates/products/sell_product.html
@@ -95,11 +95,21 @@
                 </div>
                 <div class="form-sub-w3">
                     <div class="form-group image-preview-container">
-                        <input type="file" name="item_image" id="image" class="form-control-file" accept="image/*" />
+                        <input type="file" name="item_image1" id="image" class="form-control-file" accept="image/*" />
                         <div class="icon-w3" id="imagespan">
                             <span class="fas fa-file-image" aria-hidden="true"></span>
                         </div>
-                            <img class="image-preview image-box" id="image-preview" src="#" alt="Image Preview" style="display: none;">
+                            {% comment %} <img class="image-preview image-box" id="image-preview" src="#" alt="Image Preview" style="display: none;"> {% endcomment %}
+                        
+                    </div>
+                </div>
+                <div class="form-sub-w3">
+                    <div class="form-group image-preview-container">
+                        <input type="file" name="item_image2" id="image" class="form-control-file" accept="image/*" />
+                        <div class="icon-w3" id="imagespan">
+                            <span class="fas fa-file-image" aria-hidden="true"></span>
+                        </div>
+                            {% comment %} <img class="image-preview image-box" id="image-preview-1" src="#" alt="Image Preview" style="display: none;"> {% endcomment %}
                         
                     </div>
                 </div>
