--- a/templates/products/product.html
+++ b/templates/products/product.html
@@ -78,7 +78,7 @@
 
                         </div>
                     </div>
-                    <div class="col-lg-7 single-right-left ps-lg-5">
+                    <div class="col-lg-7 text-start single-right-left ps-lg-5">
                         <h3>{{item.item_name}}
                         </h3>
                         <div class="caption">
