Home page problem solved

--- a/templates/home.html
+++ b/templates/home.html
@@ -46,9 +46,8 @@
                                         <span class="fa fa-angle-down" aria-hidden="true"></span>
                                         <select id="categorySelect">
                                             <option value="All" selected="selected" >All</option>
-                                            {% for item in items %}
-                                            <option value="{{ item.category_name.category_type }}">{{item.category_name.category_type.upper}}</option>
-                                            {% endfor %}
+                                            <option value="scrapify">SCRAPIFY</option>
+                                            <option value="creative">CREATIVE</option>
                                         </select>
                                     </div>
     
