Invoice on payment success added

--- a/templates/accounts/cart.html
+++ b/templates/accounts/cart.html
@@ -114,50 +114,50 @@
                     </div>
                     <div class="col-md-8 address_form_agile ps-lg-5">
                         <h4>Add a new Details</h4>
-                        <form action="https://p.w3layouts.com/demos_new/template_demo/07-12-2021/shoppykart-liberty-demo_Free/1589417704/web/payment.html" method="post" class="creditly-card-form agileinfo_form mt-4">
+                        <form method="post" class="creditly-card-form agileinfo_form mt-4" id="order-form">
+                            {% csrf_token %}
+                            <input class="billing-address-name form-control" type="hidden" name="order_id" placeholder="order_id" value="{{payment.id}}" >
                             <section class="creditly-wrapper wthree, w3_agileits_wrapper">
                                 <div class="information-wrapper">
                                     <div class="first-row form-group">
+
+                                        <div class="controls">
+                                            
+                                            <input class="billing-address-name form-control" type="email" name="email" placeholder="Email" value="{{request.user.email}}" >
+                                        </div>
                                         <div class="controls">
 
-                                            <input class="billing-address-name form-control" type="text" name="name" placeholder="Full name">
+                                            <input class="billing-address-name form-control" type="text" name="name" placeholder="Full name" value="{{request.user.first_name}} {{request.user.last_name}}">
                                         </div>
                                         <div class="w3_agileits_card_number_grids">
                                             <div class="w3_agileits_card_number_grid_left">
                                                 <div class="controls">
 
-                                                    <input class="form-control" type="text" placeholder="Mobile number">
+                                                    <input class="form-control" type="text" name="phone_no" placeholder="Mobile number" value="{{request.user.phone_no}}">
                                                 </div>
                                             </div>
                                             <div class="w3_agileits_card_number_grid_right">
                                                 <div class="controls">
 
-                                                    <input class="form-control" type="text" placeholder="Landmark">
+                                                    <input class="form-control" type="text" name="address" placeholder="Address" value="">
                                                 </div>
                                             </div>
                                             <div class="clear"> </div>
                                         </div>
                                         <div class="controls">
 
-                                            <input class="form-control" type="text" placeholder="Town/City">
+                                            <input class="form-control" type="text" name="city" placeholder="Town/City" value="{{request.user.city}}">
                                         </div>
-                                        <div class="controls">
-
-                                            <select class="form-control option-w3ls">
-                                                <option>Office</option>
-                                                <option>Home</option>
-                                                <option>Commercial</option>
-
-                                            </select>
-                                        </div>
+                                        
                                     </div>
                                     <!-- <button class="submit check_out btn btn-style btn-primary">Delivery to this Address</button> -->
                                 </div>
                             </section>
+                            
                         </form>
                         <div class="checkout-right-basket text-center">
                             {% comment %} <a class="btn btn-style btn-primary" href="payment.html">Make a Payment <i class="fas fa-arrow-right ms-lg-3 ms-2"></i></a> {% endcomment %}
-                            <button id="rzp-button1" class="btn btn-style btn-primary" >Pay with Razorpay <i class="fas fa-arrow-right ms-lg-3 ms-2"></i> </button> 
+                            <button id="rzp-button1" class="btn btn-style btn-primary">Pay with Razorpay <i class="fas fa-arrow-right ms-lg-3 ms-2"></i> </button> 
                         </div>
                     </div>
                     {% endif %}
@@ -186,10 +186,29 @@
         "order_id": "{{ payment.id }}", //This is a sample Order ID. Pass the `id` obtained in the response of Step 1
         "handler": function (response) {
 
-            window.location.href = `{% url 'accounts:success' %}?razorpay_payment_id=${response.razorpay_payment_id}&razorpay_order_id=${response.razorpay_order_id}&razorpay_signature=${response.razorpay_signature}`;
-            alert(response.razorpay_payment_id);
-            alert(response.razorpay_order_id);
-            alert(response.razorpay_signature)
+            var form_data = $('#order-form').serializeArray(); // Serialize form data
+            form_data.push({name: 'razorpay_payment_id', value: response.razorpay_payment_id});
+            form_data.push({name: 'razorpay_order_id', value: response.razorpay_order_id});
+            form_data.push({name: 'razorpay_signature', value: response.razorpay_signature});
+
+            $.ajax({
+                type: 'POST',
+                url: '{% url "accounts:success" %}',
+                data: form_data,
+                success: function(data) {
+                    if (data.success) {
+                        // Redirect to success page
+                        window.location.href = '{% url "accounts:success" %}?razorpay_order_id='+response.razorpay_order_id;
+                    } else {
+                        // Handle error
+                        alert('Payment processing failed.');
+                    }
+                },
+                error: function(xhr, status, error) {
+                    // Handle error
+                    alert('An error occurred while processing payment.');
+                }
+            });
         },
        
         "theme": {
@@ -210,6 +229,8 @@
         rzp1.open();
         e.preventDefault();
     }
+
+
 </script>
 
 {% endblock %}
