--- a/templates/accounts/user_products.html
+++ b/templates/accounts/user_products.html
@@ -51,7 +51,9 @@
                                                 <span class="price-review">
                                                     <p>
                                                     {% if item.likes < 10 %}
-                                                    <i class="fa fa-thumbs-up"></i> Bronze}</p>
+                                                    <i class=""></i> Bronze</p>
+                                                    {% else %}
+                                                    <i class=""></i> Silver</p>
                                                     {% endif %}
                                                     
                                                 </span>
