--- a/templates/404.html
+++ b/templates/404.html
@@ -6,11 +6,11 @@
     <div class="w3l-error-grid py-5 text-center">
         <div class="container py-lg-4">
             <div class="error-block">
-                <h1>Oh no</h1>
+                <h1>404</h1>
                 <h2>Oops....</h2>
                 <p class="mt-4">We Can't seem to the page your looking for.<br>It turned to a 404 Error</p>
 
-                <a href="index.html" class="btn btn-style btn-primary mt-4"> <span class="fa fa-arrow-left me-2"></span> Back to Home</a>
+                <a href="/" class="btn btn-style btn-primary mt-4"> <span class="fa fa-arrow-left me-2"></span> Back to Home</a>
             </div>
         </div>
     </div>
