--- a/templates/invoice.html
+++ b/templates/invoice.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
 
 
-    <title>Invoice receipt - Bootdey.com</title>
+    <title>Invoice receipt -RESCRAPIFY</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://netdna.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
     <style type="text/css">
@@ -33,12 +33,14 @@
         margin-top: 5px;
       }
 
-      .receipt-content .invoice-wrapper .line-items .print a {
+      .print a {
         display: inline-block;
-        border: 1px solid #9CB5D6;
+        border: 1px solid #ef233c;
         padding: 13px 13px;
+        margin: 1rem 0;
         border-radius: 5px;
-        color: #708DC0;
+        color: #fff;
+        background-color:#ef233c;
         font-size: 13px;
         -webkit-transition: all 0.2s linear;
         -moz-transition: all 0.2s linear;
@@ -47,10 +49,11 @@
         transition: all 0.2s linear;
       }
 
-      .receipt-content .invoice-wrapper .line-items .print a:hover {
+       .print a:hover {
         text-decoration: none;
-        border-color: #333;
-        color: #333;
+        border-color: #ef233c;
+        color: #ef233c;
+        background-color: #fff;
       }
 
       .receipt-content {
@@ -236,6 +239,7 @@
         font-size: 12px;
         color: #969CAD;
       }
+
     </style>
   </head>
 
@@ -244,21 +248,21 @@
       <div class="container bootstrap snippets bootdey">
         <div class="row">
           <div class="col-md-12">
-            <div class="invoice-wrapper">
+            <div class="invoice-wrapper" id="invoice-wrapper">
               <div class="intro">
-                Hi <strong>John McClane</strong>,
+                Hi <strong>{{order.bill_name}}</strong>,
                 <br>
-                This is the receipt for a payment of <strong>$312.00</strong> (USD) for your works
+                This is the receipt for a payment of <strong>{{order.amount}} &#8377</strong> (INR) for your goods
               </div>
               <div class="payment-info">
                 <div class="row">
                   <div class="col-sm-6">
-                    <span>Payment No.</span>
-                    <strong>434334343</strong>
+                    <span>Order No.</span>
+                    <strong>{{order.order_id}}</strong>
                   </div>
                   <div class="col-sm-6 text-right">
                     <span>Payment Date</span>
-                    <strong>Jul 09, 2014 - 12:20 pm</strong>
+                    <strong>{{order.created_at}}</strong>
                   </div>
                 </div>
               </div>
@@ -267,32 +271,28 @@
                   <div class="col-sm-6">
                     <span>Client</span>
                     <strong>
-                      Andres felipe posada
+                      {{order.bill_name}}
                     </strong>
                     <p>
-                      989 5th Avenue <br>
-                      City of monterrey <br>
-                      55839 <br>
-                      USA <br>
+                      {{order.address}}<br>
+                      {{order.city}}<br>
                       <a href="#">
-                        <span class="__cf_email__"
-                          data-cfemail="0d676263637469686b6b4d6a606c6461236e6260">[email&#160;protected]</span>
+                        {{order.email}}
                       </a>
                     </p>
                   </div>
                   <div class="col-sm-6 text-right">
                     <span>Payment To</span>
                     <strong>
-                      Juan fernando arias
+                      RESCRAPIFY
                     </strong>
                     <p>
-                      344 9th Avenue <br>
-                      San Francisco <br>
-                      99383 <br>
-                      USA <br>
+                      RESCRAPIFY Office <br>
+                      Ahmedabad <br>
+                      380001 <br>
+                      INDIA <br>
                       <a href="#">
-                        <span class="__cf_email__"
-                          data-cfemail="7d17081c131b180f3d1a101c1411531e1210">[email&#160;protected]</span>
+                        harsh@gmail.com
                       </a>
                     </p>
                   </div>
@@ -307,69 +307,47 @@
                   </div>
                 </div>
                 <div class="items">
+
+                  {% for order_item in order.cart.cart_items.all %}
                   <div class="row item">
                     <div class="col-xs-4 desc">
-                      Html theme
-                    </div>
-                    <div class="col-xs-3 qty">
-                      3
-                    </div>
-                    <div class="col-xs-5 amount text-right">
-                      $60.00
-                    </div>
-                  </div>
-                  <div class="row item">
-                    <div class="col-xs-4 desc">
-                      Bootstrap snippet
+                      {{ order_item.item.item_name }}
                     </div>
                     <div class="col-xs-3 qty">
                       1
                     </div>
                     <div class="col-xs-5 amount text-right">
-                      $20.00
+                      {{order_item.item.price}} &#8377
                     </div>
                   </div>
-                  <div class="row item">
-                    <div class="col-xs-4 desc">
-                      Snippets on bootdey
-                    </div>
-                    <div class="col-xs-3 qty">
-                      2
-                    </div>
-                    <div class="col-xs-5 amount text-right">
-                      $18.00
-                    </div>
-                  </div>
+                  {% endfor %}
+                  
                 </div>
                 <div class="total text-right">
                   <p class="extra-notes">
                     <strong>Extra Notes</strong>
-                    Please send all items at the same time to shipping address by next week.
-                    Thanks a lot.
+                    Thank-you for shopping with RESCRAPIFY
                   </p>
                   <div class="field">
-                    Subtotal <span>$379.00</span>
-                  </div>
-                  <div class="field">
-                    Shipping <span>$0.00</span>
-                  </div>
-                  <div class="field">
-                    Discount <span>4.5%</span>
+                    Subtotal <span>{{order.amount}} &#8377</span>
                   </div>
                   <div class="field grand-total">
-                    Total <span>$312.00</span>
+                    Total <span>{{order.amount}} &#8377</span>
                   </div>
                 </div>
-                <div class="print">
-                  <a href="#">
-                    <i class="fa fa-print"></i>
-                    Print this receipt
-                  </a>
-                </div>
+           
+            
+                
               </div>
             </div>
-            <div class="footer">
-              Copyright © 2014. company name
+            <div class="footer" id="footer">
+              <div class="print">
+                <a href="" id="print-receipt">
+                  <i class="fa fa-print" ></i>
+                  Print this receipt
+                </a>
+              </div>
+              Copyright © 2024. RESCRAPIFY
             </div>
           </div>
         </div>
@@ -383,5 +361,23 @@
 
     </script>
   </body>
+  <script type="text/javascript">
+    document.getElementById('print-receipt').addEventListener('click', function(e) {
+      e.preventDefault(); // Prevent the default action of the link
+      
+      // Hide all elements except for the invoice content
+      var elementsToHide = document.getElementById('footer');
+      elementsToHide.style.display = 'none';
+      
+      
+      // Trigger the print dialog
+      window.print();
+      
+      // Show all elements again
+      elementsToHide.style.display = 'block';
+      
+  });
+</script>
 
 </html>
+
